# training-cost-trends

./: .gitignore  CLAUDE.md  ERRORS.md  README.md  compare_frontier_selections.ipynb  compare_methods.ipynb  compared_results.ipynb  cost.py  cost_analysis.ipynb  cost_analysis_all_models.ipynb  cost_analysis_john_og_version.ipynb  cost_analysis_standalone.py  cost_analysis_streamlined.ipynb  cud_estimate.ipynb  data.py  data_exploration.ipynb  development_cost.ipynb  energy.py  full_cost.ipynb  h100_manufacturing_cost.ipynb  hardware.py  imputation.py  imputation_sensitivity.ipynb  inflation.py  ml_model_selection.ipynb  ml_systems_priority.ipynb  model_costs.csv  model_costs_updated.csv  parameters.py  plotting.py  price_data_collection_utility.ipynb  prices.py  pyproject.toml  regression.py  regression_analysis.ipynb  requirements.txt  uncertainty.ipynb  update_model_costs.ipynb  utils.py  validate_imputation.ipynb
.claude/: settings.local.json
claude-data/: frontier_systems_by_backward_window_percentile.json  frontier_systems_by_residual_from_trend.json  frontier_systems_by_top_n.json  gpt-4_contributions.json
data/: All ML Systems - full view - 2023-12-14.csv  All ML Systems - full view.csv  Chip dataset-Grid view.csv  Hardware prices.csv  PCU518210518210.csv  frontier_sysstems_by_top_n.json  frontier_systems.txt  frontier_systems_by_backward_window_percentile.json  frontier_systems_by_residual.json  frontier_systems_by_top_n.json  frontier_systems_by_window_percentile.json  hardware_purchase_times.txt
identify foundation models/: foundation model prices.csv  (+3 more)
(+21 files in other folders)
