[project]
name = "training-cost-trends"
version = "0.2.0"
description = 'Code for the paper "The rising costs of training frontier AI models"'
readme = "README.md"
requires-python = ">=3.12.11"
dependencies = [
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pyairtable>=3.1.1",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
training-cost-trends = "training_cost_trends.__main__:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
